platform/kubernetes/home-automation/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: home-assistant-headers
  namespace: home-automation
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
    customResponseHeaders:
      X-Frame-Options: "SAMEORIGIN"
