platform/kubernetes/home-automation/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-automation
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ha.wind.etherport.net`)
      kind: Rule
      middlewares:
        - name: home-assistant-headers
      services:
        - name: home-assistant
          port: 8123
          serversTransport: home-assistant-transport
  tls: {}
